# brilliant_problem_scripts

./: pyproject.toml
brilliant/: digit_challenge.py
brilliant/QFinance/: scratch.py
tests/: test_brilliant.py
